--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -12,11 +12,13 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^12.9.4",
     "highlight.js": "^11.11.1",
+    "mermaid": "^11.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
+    "react-zoom-pan-pinch": "^3.7.0",
     "rehype-highlight": "^7.0.2",
     "styled-components": "^6.1.17",
     "web-vitals": "^2.1.4"
